--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
         name: Build image
         no_output_timeout: 40m
         command: |
+          set -ex
           # Process variables
           PIPELINE="${CIRCLE_BRANCH}"
           if [ "${APPID}" = 90 ]; then
