--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
     machine:
       image: ubuntu-1604:201903-01
       docker_layer_caching: false
+    environment:
+      BUILD_DIR: build/
+      UPDATE_DIR: update/
     steps:
     - checkout
     - run:
