--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,8 @@ jobs:
                   -t \
                   --rm \
                   "${GAME_IMAGE}" \
-                  "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit"
+                  "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit" \
+                  || (echo "Exit code: $?" && exit 1)
               echo; date
           fi
           # Push the game image
