--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,8 @@ script:
           -t \
           --rm \
           "${GAME_IMAGE}" \
-          "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit"
+          "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit" \
+          || (echo "Exit code: $?" && exit 1)
       echo; date
   fi
 - |
