--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,7 +103,8 @@ jobs:
               -t \
               --rm \
               "${GAME_IMAGE}" \
-              "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit"
+              "printenv && echo && ls -al && echo && exec ${GAME_BIN} -game ${GAME} +version +exit" \
+              || (echo "Exit code: $?" && exit 1)
           echo; date
       fi
     displayName: Test image
