Fix: Fix .circle/config.yml to always execute docker logout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,10 @@ jobs:
               time docker push "${REPOSITORY}"
               date
           fi
+    - run:
+        name: After script
+        when: always
+        command: |
           docker logout
   send-notification:
     machine:
