Fix tf builds with `STEAM_LOGIN=true` and resume builds

--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@ NO_PUSH=
 DOCKER_REPOSITORY=sourceservers/tf
 #REGISTRY_USER=
 #REGISTRY_PASSWORD=
-STEAM_LOGIN=
+STEAM_LOGIN=true
 #STEAM_USERNAME=
 #STEAM_PASSWORD=
